Adapta o index para as definições do projeto

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -9,3 +9,14 @@ fast-render
 ms-seo
 roles
 moment-with-langs
+/iron-router
+/handlebars-server
+/collection-hooks
+/sitemaps
+/bootstrap-3
+/fast-render
+/ms-seo
+/roles
+/moment-with-langs
+/blaze-layout
+/robots-txt
